--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 		<version>2.4.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.ipi</groupId>
+	<groupId>com.ipiecoles</groupId>
 	<artifactId>batch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>batch</name>
 	<description>Formation Spring Batch</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>15</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,7 +51,6 @@
 			<version>1.4.199</version>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
@@ -61,11 +60,6 @@
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.14</version>
 		</dependency>
 	</dependencies>
 
