--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=TRUE;FILE_LOCK=NO
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -6,5 +6,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.batch.initialize-schema=always
 
-communesImportBatch.chunksize=10
-
+importFile.chunkSize=10
